[+] Finished script api, added keybinds